# Python-Carreiras

./: .replit  README.md  app.py  pyproject.toml  requirements.txt
static/: estilo.css
templates/: home.html
templates/includes/: vagas_item.html
